# eq-ncnn

./: .gitignore  CMakeLists.txt  README.md  arm.toolchain.cmake  compiler.sh
benchmark/: benchncnn-int8.cpp
examples/: CMakeLists.txt  pose_demo.cpp
examples/Python_NCNN/: Makefile  ncnn.cpp
examples/Python_NCNN_JRfacessd/: Makefile  ncnn.cpp  ncnn.h  ncnn2python.cpp
src/: CMakeLists.txt  benchmark.cpp  benchmark.cpp.tq  help.cpp  help.h  layer.h  net.cpp
src/layer/: convolution.cpp  dequantize.cpp  requantize.cpp
src/layer/arm/: convolution_1x1_int8.h  convolution_3x3_e2e_int8.h  convolution_3x3_int8.h  convolution_5x5_int8.h  convolution_7x7_int8.h  convolution_arm.cpp  convolution_sgemm_int8.h  convolutiondepthwise_arm.cpp  dequantize_arm.cpp  quantize_arm.cpp  requantize_arm.cpp
src/layer/x86/: convolution_1x1_int8.h  convolution_3x3_int8.h  convolution_5x5_int8.h  convolution_7x7_int8.h  convolution_sgemm_int8.h  convolution_x86.cpp
